legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr56724-3.c-4.8.2-3.out.txt
pr56724-3.c: In function ‘call’:
pr56724-3.c:13:3: error: incompatible type for argument 3 of ‘xfer’
   xfer (x, y, t);  
   ^
pr56724-3.c:5:13: note: expected ‘unsigned char *’ but argument is of type ‘struct T’
 extern void xfer (int, int, unsigned char *);
             ^
